sonda-core/tests/snapshots/compile_snapshot__snapshot_histogram_basic.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: entries
---
[
  {
    "buckets": [
      0.005,
      0.01,
      0.025,
      0.05,
      0.1,
      0.25,
      0.5,
      1.0,
      2.5,
      5.0,
      10.0
    ],
    "distribution": {
      "type": "normal",
      "mean": 0.1,
      "stddev": 0.05
    },
    "duration": "30s",
    "encoder": {
      "type": "prometheus_text"
    },
    "labels": {
      "handler": "/api",
      "method": "GET"
    },
    "name": "http_request_duration_seconds",
    "observations_per_tick": 50,
    "on_sink_error": "warn",
    "rate": 1.0,
    "seed": 42,
    "signal_type": "histogram",
    "sink": {
      "type": "stdout"
    }
  }
]
