sonda-core/tests/snapshots/compile_snapshot__snapshot_multi_scenario_prepared.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: prepared_view(&prepared)
---
[
  {
    "duration": "60s",
    "encoder": {
      "type": "prometheus_text"
    },
    "generator": {
      "type": "constant",
      "value": 95.0
    },
    "name": "cpu_idle",
    "rate": 1.0,
    "signal_type": "metrics",
    "sink": {
      "type": "stdout"
    }
  },
  {
    "clock_group": "infra",
    "duration": "60s",
    "encoder": {
      "type": "prometheus_text"
    },
    "generator": {
      "type": "sine",
      "amplitude": 20.0,
      "period_secs": 30.0,
      "offset": 50.0
    },
    "labels": {
      "hostname": "web-01"
    },
    "name": "mem_usage",
    "phase_offset": "5s",
    "rate": 2.0,
    "signal_type": "metrics",
    "sink": {
      "type": "stdout"
    },
    "start_delay_ms": 5000
  },
  {
    "duration": "60s",
    "encoder": {
      "type": "influx_lp"
    },
    "generator": {
      "type": "sawtooth",
      "min": 0.0,
      "max": 100.0,
      "period_secs": 120.0
    },
    "name": "disk_io",
    "rate": 1.0,
    "signal_type": "metrics",
    "sink": {
      "type": "stdout"
    }
  }
]
