sonda-core/tests/snapshots/compile_snapshot__snapshot_single_log_template.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: entries
---
[
  {
    "bursts": null,
    "cardinality_spikes": null,
    "clock_group": null,
    "duration": "20s",
    "dynamic_labels": null,
    "encoder": {
      "type": "json_lines",
      "precision": null
    },
    "gaps": null,
    "generator": {
      "type": "template",
      "templates": [
        {
          "message": "Request from {ip} to {endpoint} completed",
          "field_pools": {
            "endpoint": [
              "/api/v1/health",
              "/api/v1/metrics"
            ],
            "ip": [
              "10.0.0.1",
              "10.0.0.2",
              "10.0.0.3"
            ]
          }
        }
      ],
      "severity_weights": {
        "error": 0.1,
        "info": 0.7,
        "warn": 0.2
      },
      "seed": 42
    },
    "jitter": null,
    "jitter_seed": null,
    "labels": null,
    "name": "app_logs",
    "phase_offset": null,
    "rate": 5.0,
    "signal_type": "logs",
    "sink": {
      "type": "stdout"
    }
  }
]
