sonda-core/tests/snapshots/compile_snapshot__snapshot_single_metric_constant_prepared.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: prepared_view(&prepared)
---
[
  {
    "duration": "10s",
    "encoder": {
      "type": "prometheus_text"
    },
    "generator": {
      "type": "constant",
      "value": 42.0
    },
    "name": "cpu_usage",
    "on_sink_error": "warn",
    "rate": 1.0,
    "signal_type": "metrics",
    "sink": {
      "type": "stdout"
    }
  }
]
