sonda-core/tests/snapshots/compile_snapshot__snapshot_single_metric_sine_prepared.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: prepared_view(&prepared)
---
[
  {
    "duration": "30s",
    "encoder": {
      "type": "prometheus_text"
    },
    "generator": {
      "type": "sine",
      "amplitude": 50.0,
      "period_secs": 60.0,
      "offset": 100.0
    },
    "labels": {
      "hostname": "router-01",
      "interface": "eth0"
    },
    "name": "interface_traffic",
    "rate": 10.0,
    "signal_type": "metrics",
    "sink": {
      "type": "stdout"
    }
  }
]
