sonda-core/tests/snapshots/compile_snapshot__snapshot_summary_basic.snap
---
source: sonda-core/tests/compile_snapshot.rs
expression: entries
---
[
  {
    "bursts": null,
    "cardinality_spikes": null,
    "clock_group": null,
    "distribution": {
      "type": "exponential",
      "rate": 10.0
    },
    "duration": "30s",
    "dynamic_labels": null,
    "encoder": {
      "type": "prometheus_text",
      "precision": null
    },
    "gaps": null,
    "jitter": null,
    "jitter_seed": null,
    "labels": {
      "service": "auth"
    },
    "mean_shift_per_sec": null,
    "name": "rpc_duration_seconds",
    "observations_per_tick": 100,
    "phase_offset": null,
    "quantiles": [
      0.5,
      0.9,
      0.95,
      0.99
    ],
    "rate": 1.0,
    "seed": 7,
    "signal_type": "summary",
    "sink": {
      "type": "stdout"
    }
  }
]
